--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <center>
             <p style="font-style: italic; font-size:x-large;">"The mind is the limit. When you face your struggles, you overcome them."</p>
             <h1>MY AWESOME GAME</h1>
-            <h2>Pepito Perez (HS Freshman )</h2>
+            <h2>Ramanjot Kaur (HS Sophmore )</h2>
             <h3>Game Developer in the Making</h3>
             <p></p></center>
           </div>
@@ -65,7 +65,7 @@
 </video>
   vbsdfd
   -->
-  <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/xXnuaCXU2NIncxOwOfdVzHh261yXmJE6xguSA0BZ2Bc/embed"></iframe>
+  <iframe width="392" height="620" style="border: 0px;" src="webgame.mp4"></iframe>
 
   <!--<iframe src="https://play.unity.com/en/games/1ac0fb59-0583-4d44-89f3-0dec0e5a0b2e/rab-to-g4c" height="700" width="900" title="Iframe Example"></iframe>
 --></div>
