--- a/index.html
+++ b/index.html
@@ -59,15 +59,11 @@
             <h3>Game Developer in the Making</h3>
             <p></p></center>
           </div>
-<div> <!-- you May use a video
+<div>
   <video width="1000" height="740" controls>
-  <source src="movie.mp4" type="video/mp4">
-</video>
-  vbsdfd
-  -->
-  <iframe width="392" height="620" style="border: 0px;" src="webgame.mp4"></iframe>
-
-  <!--<iframe src="https://play.unity.com/en/games/1ac0fb59-0583-4d44-89f3-0dec0e5a0b2e/rab-to-g4c" height="700" width="900" title="Iframe Example"></iframe>
+  <source src="webgame.mp4" type="video/mp4">
+  </video>
+  
 --></div>
           <!--pitch SECTION-->
           <div id="pitch" class="w3-container w3-margin-top-20-percent w3-cursive w3-large">
