--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <!--IMAGE/AVATAR-->
         <img src="avatar.png" class="w3-circle w3-border w3-border-sand" style="border-width: 3px !important;">
         <!--S0CIAL NETWORK BUTTONS-->
-        <div class="links w3-margin-top w3-padding-small">
+        <div class="links" w3-margin-top w3-padding-small">
           <a class="icon-link w3-text-sand w3-hover-text-amber" href="#linkedin" target="_blank">
             <i data-feather="linkedin"></i>
           </a>
